@@ -248,6 +248,7 @@ class Usecode_machine
 	USECODE_INTRINSIC_DECL(kill_npc);
 	USECODE_INTRINSIC_DECL(set_attack_mode);
 	USECODE_INTRINSIC_DECL(set_opponent);
+	USECODE_INTRINSIC_DECL(display_area);
 	USECODE_INTRINSIC_DECL(resurrect);
 	USECODE_INTRINSIC_DECL(add_spell);
 	USECODE_INTRINSIC_DECL(sprite_effect);
