@@ -1,5 +1,6 @@
 2000-08-26  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* usecode.cc: Support crystal-ball.
 	* gametxt.cc: Fixed bee combat mode, also smokebombs.
 
 2000-08-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
